--- a/task-html/task-2.html
+++ b/task-html/task-2.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>task-2</title>
   </head>
   <body>
-    <script src="./js/task1.js">
-      task1
-    </script>
-    <script src="./js/task2.js">
-      task2
-    </script>
+    <a href="/index.html">Home</a>
+    <script src="./js/task2.js"></script>
   </body>
 </html>
